--- a/main.html
+++ b/main.html
@@ -4,5 +4,30 @@
   </head>
   <body>
     <!-- Write your code here -->
+	  <div class="facebook">
+		  <section class="left">
+			  <logo>
+				  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="facebook logo">
+			      <p>Facebook helps you connect and share with the people in your life.</p>
+			  </logo>
+		  </section>
+	  </div>
+	  <div class="facebook">
+		  <section class="right">
+			  <div id="right">
+			  <form class="form">
+			  <input type="text" id="email" placeholder="Email address or phone number">
+			  <input type="password" id="password" placeholder="Password"><br>
+			  </form>
+			  <div>
+				  <button class="btn" type="submit">Log in</button><br>
+			  </div>
+				  <a href="#">Forgotten account?</a><br>
+			  <div>
+			  <button class="signup">Create new account</button>
+			  </div>
+			  </div>
+		  </section>
+	  </div>
   </body>
 </html>
