--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	  <div class="facebook">
 		  <section class="left">
 			  <logo>
-				  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="facebook logo">
+				  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
 			      <p>Facebook helps you connect and share with the people in your life.</p>
 			  </logo>
 		  </section>
