--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Facebook Login</title>
+	    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Write your code here -->
