--- a/main.html
+++ b/main.html
@@ -19,14 +19,10 @@
 			  <form class="form">
 			  <input type="text" id="email" placeholder="Email address or phone number">
 			  <input type="password" id="password" placeholder="Password"><br>
-			  </form>
-			  <div>
-				  <button class="btn" type="submit">Log in</button><br>
-			  </div>
-				  <a href="#">Forgotten account?</a><br>
-			  <div>
+			  <button class="btn" type="submit">Log in</button>
+			  <a href="#">Forgotten account?</a>
 			  <button class="signup">Create new account</button>
-			  </div>
+			  </form>
 			  </div>
 		  </section>
 	  </div>
